--- a/html/index.html
+++ b/html/index.html
@@ -5,14 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-	<header></header>
-	<main>
-	  <div class="left"></div>
-	  <div class="middle">
-	  	<div id="info"></div>
-	  </div>
-	  <div class="right"></div>
-	</main>
+	<div id="app"></div>
 	<script src="bundle.js"></script>
 </body>
 </html>
